# agent-adk-chainlit

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
src/config/: common.py
src/database/: persistent_data_layer.py
src/document/: document_processor.py  processor_config.py
src/llm/agents/: question_answer_agent.py  search_agent.py
src/llm/agents/utils/: session_and_runner.py
src/llm/speech/: speech_to_text.py
src/ui/: chat_starters.py  commands.py
